--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "client",
+  "name": "skilledge-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port 3000",
+    "start": "vite preview --host 0.0.0.0 --port 3000"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
@@ -18,6 +23,8 @@
   "dependencies": {
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4"
   }
 }
