--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:prod": "npm run clean && npm install --legacy-peer-deps && npm run build",
+    "clean": "rimraf node_modules package-lock.json dist",
     "preview": "vite preview --host 0.0.0.0 --port 3000",
     "start": "vite preview --host 0.0.0.0 --port 3000"
   },
@@ -17,6 +19,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "rimraf": "^5.0.10",
     "typescript": "~5.9.3",
     "vite": "^5.4.10"
   },
@@ -26,5 +29,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.52.4",
+    "@rollup/rollup-win32-x64-msvc": "^4.52.4"
   }
 }
