--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:prod": "npm run clean && npm install --legacy-peer-deps && npm run build",
     "clean": "rimraf node_modules package-lock.json dist",
     "preview": "vite preview --host 0.0.0.0 --port 3000",
-    "start": "vite preview --host 0.0.0.0 --port 3000"
+    "start": "node server.cjs"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
@@ -24,6 +24,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "express": "^4.21.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
