--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.1.0",
     "express": "^4.21.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
