--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.4"
